# ai-sessions-viewer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.en.md  README.ja.md  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: release-ci.md
src/: App.vue  api.ts  export.ts  format.ts  main.ts  mermaid.ts  pricing.ts  recents.ts  sessionsToolbar.ts  settings.ts  style.css  tooltip.ts  types.ts  updateCheck.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: verify_stats.rs
src-tauri/src/: lib.rs  menu.rs  trash.rs  tray.rs  types.rs  util.rs  watch.rs
src-tauri/src/agents/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/stats/: aggregate.rs  classifier.rs  pricing.rs  stream.rs
src/components/: SettingsModal.vue  Sidebar.vue  SidebarTopbar.vue  ToolResult.vue  icons.ts
src/components/topbar/: ChatTopbar.vue  SessionsTopbar.vue  TrashTopbar.vue
src/locales/: en.ts  ja.ts  zh-TW.ts  zh.ts
src/modals/: ProjectContextMenu.vue
src/views/: ChatView.vue  ExportHistoryView.vue  PricingView.vue  SessionsView.vue  StatsView.vue  TrashView.vue  WelcomeView.vue
test/: api.test.ts  chatToolbar.test.ts  export.test.ts  format.test.ts  recents.test.ts  sessionsToolbar.test.ts  settings.test.ts  setup.ts
test/components/: GlobalSearchModal.test.ts  SessionsTopbar.test.ts  SettingsModal.test.ts  Sidebar.test.ts  SidebarTopbar.test.ts  TrashTopbar.test.ts
test/views/: SessionsView.test.ts  TrashView.test.ts
