[package]
name = "ai-sessions-viewer"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_session_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# bundled = 编译期把 SQLite 源码静态链进来，不依赖系统 libsqlite3，
# macOS 系统库版本太旧，Windows 也没有，bundled 一劳永逸
rusqlite = { version = "0.32", features = ["bundled"] }
# 全局搜索时跨 session 并行扫描；rayon 是纯 CPU work-stealing 线程池，零运行时配置。
rayon = "1"
# 统计活动分类（codeburn 风格的关键词正则）+ Bash 命令首词提取用。
regex = "1"
once_cell = "1"
# 实时 tail：监听打开会话所在 JSONL 文件的写入事件。
# default-features=false 关掉 cross-beam 依赖，统一走平台原生（FSEvents/inotify/ReadDirectoryChangesW）。
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSGeometry"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSResponder", "NSView", "NSButton", "NSWindow", "NSToolbar"] }
