[package]
name = "ai-sessions-viewer"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_session_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
# 仅开发期用：把 MCP Bridge 注入 app，让 AI 经 WebSocket 看/控窗口（在 lib.rs 里
# 用 #[cfg(debug_assertions)] 注册，release 不会启用）。
tauri-plugin-mcp-bridge = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# bundled = 编译期把 SQLite 源码静态链进来，不依赖系统 libsqlite3，
# macOS 系统库版本太旧，Windows 也没有，bundled 一劳永逸
rusqlite = { version = "0.32", features = ["bundled"] }
# 全局搜索时跨 session 并行扫描；rayon 是纯 CPU work-stealing 线程池，零运行时配置。
rayon = "1"
# 统计活动分类（codeburn 风格的关键词正则）+ Bash 命令首词提取用。
regex = "1"
once_cell = "1"
# 实时 tail：监听打开会话所在 JSONL 文件的写入事件。
# default-features=false 关掉 cross-beam 依赖，统一走平台原生（FSEvents/inotify/ReadDirectoryChangesW）。
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
# 启动时后台从 LiteLLM 拉模型价格表，新模型上架不必发版。
# 同步 API（默认 native-tls，rustls 失败可退回系统 OpenSSL），
# 在 background thread 里跑、不污染 cost_usd 的同步调用链。
ureq = { version = "2", features = ["json"] }
# Today / 7d / 30d 统计窗口要按本地日历日切，而非滚动 24h —— 和
# codeburn / 各家 dashboard 保持一致。chrono 提供 Local::now + 日历运算。
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSGeometry"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSResponder", "NSView", "NSButton", "NSWindow", "NSToolbar"] }
